cambio en html2

--- a/HTML/Sheets/ex02/EjerciciosHTML2.html
+++ b/HTML/Sheets/ex02/EjerciciosHTML2.html
@@ -58,5 +58,7 @@ En su libro Tejiendo la red, publicado en 1999, Berners-Lee
 explica por qué la tecnología web es libre y gratis. Se con
 sidera al mismo tiempo el inventor y el protector de la we
 b.
+
+cambio en el 2
 </body>
 </html>
