--- a/HTML/Sheets/ex03/EjerciciosHTML3.html
+++ b/HTML/Sheets/ex03/EjerciciosHTML3.html
@@ -17,13 +17,15 @@ conectar las distintas redes del Departamento de Defensa de
 los Estados Unidos, todas ellas de diferentes tipos y que f
 uncionaban con diversos sistemas operativos, con independen
 cia del tipo de conexión: radioenlaces, satélites y líneas
-telefónicas.
+telefónicas.<br><br>
+
 Las investigaciones, lideradas por Vinton Cerf, primero des
 de la Universidad de California (1967-1972) y posteriorment
 e desde la Universidad de Stanford (1972-1976), llevaron al
 diseño del conjunto de protocolos que hoy son conocidos com
 o TCP/IP(Transmission Control Protocol/Internet Protocol),
-que fue presentado por Vinton Cerf y Robert Kahn en 1972.
+que fue presentado por Vinton Cerf y Robert Kahn en 1972.<br><br>
+
 Entre 1976 y 1982, trabajando en DARPA, fue pionero en el d
 esarrollo de la transmisión por radio y satélite de paquete
 s, responsable del proyecto Internet y del programa de inve
@@ -31,14 +33,16 @@ stigación de seguridad en la red. Siempre preocupado por lo
 s problemas de conexión de redes, Cerf estableció en 1979 l
 a Internet Configuration Control Board (que posteriormente
 se denominó Internet Activities Board), y fue su primer pre
-sidente.
+sidente.<br><br>
+
 Entre 1982 y 1986, Cerf diseñó el MCI MAIL, primer servicio
 comercial de correo electrónico que se conectaría a Interne
-t.
+t.<br><br>
 En 1992 fue uno de los fundadores de la Internet Society y
-su primer presidente.
+su primer presidente.<br><br>
+
 Actualmente Vinton Cerf es el vicepresidente mundial y Chie
-f Internet Evangelist de Google.
+f Internet Evangelist de Google.<br><br>
 Es miembro del Consejo Asesor Internacional del Centro Cult
 ural Internacional Oscar Niemeyer de Avilés, Asturias.
 
