--- a/CSS/Sheet02/ex05/ex05.html
+++ b/CSS/Sheet02/ex05/ex05.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, init
-ial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 5</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
